Add client and version input retrieval